# ArizonaWaterObservatory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  cloudbuild.yaml  dagster.yaml  docker-compose.yml  main.py  makefile  pygeoapi.config.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: push_grace_workflow.yml  push_smap_workflow.yml  push_to_ghcr.yml  pyright.yml  ui-test.yml
GRACE_ETL/: Dockerfile  README.md  cloudbuild.yaml  makefile  pyproject.toml
GRACE_ETL/src/: lib.py  main.py  main_test.py
SMAP_ETL/: Dockerfile  README.md  cloudbuild.yaml  makefile  pyproject.toml
SMAP_ETL/src/: lib.py  lib_test.py  main.py
db/: jobs.sql  restore.sh
docs/: architecture.md  google_cloud_storage_setup.md
pygeoapi-deployment/: Dockerfile  README.md  entrypoint.sh  local.openapi.yml  pygeoapi.config.yml
pygeoapi-deployment/static/css/: default.css
pygeoapi-deployment/templates/collections/: collection.html
terraform/: grace.tf  jobs.sql  main.tf  makefile  outputs.tf  restore_backup.sh  variables.tf
ui/: default.env  index.html  package-lock.json  package.json
ui/.storybook/: preview.tsx
ui/src/: App.tsx  Router.tsx  global.css  main.tsx  theme.ts
ui/src/assets/: AddLocation.tsx  Basemap.tsx  Camera.tsx  Check.tsx  Chevron.tsx  Circle.tsx  Copy.tsx  Draw.tsx  Email.tsx  FAQ.tsx  Glossary.tsx  InfoSimple.tsx  Label.tsx  Legend.tsx  Line.tsx  Map.tsx  MapSearch.tsx  Menu.tsx  Notifications.tsx  Search.tsx  SpatialSelection.tsx  Square.tsx  Tools.tsx  Tune.tsx
ui/src/components/: types.ts
ui/src/components/Accordion/: Accordion.module.css  Accordion.story.tsx  Accordion.test.tsx  Accordion.types.ts  index.tsx
ui/src/components/Button/: Button.module.css  Button.story.tsx  Button.test.tsx  Button.types.ts  index.tsx
ui/src/components/Charts/: BarChart.tsx  LineChart.tsx  types.ts  utils.ts
ui/src/components/Charts/__tests__/: BarChart.test.tsx  RadarChart.test.tsx
ui/src/components/Checkbox/: Checkbox.module.css  Checkbox.story.tsx  Checkbox.test.tsx  index.tsx
ui/src/components/Code/: Code.module.css  Code.story.tsx  Code.test.tsx  index.tsx
ui/src/components/ColorInput/: ColorInput.module.css  ColorInput.story.tsx  ColorInput.test.tsx  index.tsx
ui/src/components/CopyInput/: CopyInput.module.css  CopyInput.test.tsx  index.tsx
ui/src/components/DateInput/: DateInput.story.tsx  DateInput.test.tsx  DateInput.types.ts  index.tsx  utils.ts
ui/src/components/IconButton/: IconButton.module.css  IconButton.story.tsx  IconButton.test.tsx  IconButton.types.ts  index.tsx
ui/src/components/Map/: ClientSide.tsx  Lazy.tsx  index.tsx  types.ts  utils.ts
ui/src/components/Map/__tests__/: ClientSide.test.tsx  utils.test.ts
ui/src/components/Menu/: ActionItem.tsx  Item.tsx  Menu.module.css  Menu.story.tsx  Menu.test.tsx  MenuItem.tsx  Section.tsx  index.tsx  types.ts  utils.ts
ui/src/components/Modal/: Modal.module.css  Modal.story.tsx  Modal.test.tsx  index.tsx
ui/src/components/NumberInput/: NumberInput.story.tsx  NumberInput.test.tsx  NumberInput.types.ts  index.tsx
ui/src/components/Pagination/: Pagination.module.css  Pagination.story.tsx  Pagination.test.tsx  index.tsx
ui/src/components/Popover/: Popover.module.css  Popover.story.tsx  index.tsx
ui/src/components/Select/: Select.module.css  Select.story.tsx  Select.test.tsx  index.tsx
ui/src/components/TextInput/: TextInput.story.tsx  TextInput.test.tsx  index.tsx
ui/src/consts/: bbox.ts  collections.ts  geojson.ts
ui/src/contexts/: MapContexts.tsx
ui/src/features/Charts/: Charts.module.css  Tabbed.tsx  Unmanaged.tsx  index.tsx  types.ts  utils.ts
ui/src/features/Loading/: Info.tsx  Loading.module.css  index.tsx
ui/src/features/Map/: config.ts  consts.ts  index.tsx  sources.ts  utils.ts
ui/src/features/Notifications/: History.tsx  Notifications.module.css  index.tsx
ui/src/features/Panel/: ClearAll.tsx  Header.tsx  Panel.module.css  Toggle.tsx  index.tsx
ui/src/features/Panel/Datasets/: index.tsx
ui/src/features/Panel/Layers/: index.tsx
ui/src/features/Panel/Locations/: LayerSection.tsx  index.tsx
ui/src/features/Popup/: Chart.tsx  Grid.tsx  Header.tsx  Item.tsx  Location.tsx  Popup.module.css  index.tsx  utils.tsx
ui/src/features/Search/: Entry.tsx  Matches.tsx  Properties.tsx  Search.module.css  index.tsx  utils.tsx
ui/src/features/Table/: Table.module.css  index.tsx
ui/src/features/Tools/: Basemap.tsx  Draw.tsx  FAQ.tsx  Geocoder.tsx  Glossary.tsx  Legend.tsx  Mobile.tsx  Screenshot.tsx  Tools.module.css  Warning.tsx  Warnings.tsx  index.tsx
ui/src/features/Tools/DateSelector/: Entry.tsx  index.tsx  utils.ts
ui/src/features/Tools/Legend/: Content.tsx  Entry.tsx  Grid.tsx  (+4 more)
ui/src/features/TopBar/: Mobile.tsx  TopBar.module.css  index.tsx
ui/src/hooks/: useConfirmableAction.ts  useDebounce.ts  useDraw.ts  useLayerValidation.ts  useLoading.ts  useLocations.ts  useMeasure.ts  useSections.ts  useSpatialSelection.ts
ui/src/managers/: Loading.init.ts  Loading.manager.ts  Main.init.ts  Main.manager.ts  Main.utils.ts  Notification.manager.ts  Warning.init.ts  types.ts
ui/src/managers/__tests__/: Loading.test.ts  Main.test.ts  Notification.test.ts
ui/src/pages/: Data.page.tsx  Home.page.tsx  Layout.page.tsx  Map.page.tsx  pages.module.css
ui/src/providers/: Mantine.tsx  Map.tsx  index.tsx
ui/src/services/: covGrid.service.ts  coverageGrid.service.ts  csv.service.ts  edr.service.ts
ui/src/services/coverageJSON/: consts.ts  coverage.service.ts  coverageChart.service.ts  coverageGeo.service.ts  types.ts
ui/src/services/init/: awo.init.ts  geoconnex.init.ts
ui/src/stores/main/: index.ts  types.ts
ui/src/stores/session/: index.ts  types.ts
ui/src/utils/: collection.ts  compareArrays.ts  filterCollections.ts  getLabel.ts  groupLocationsByCollection.ts  hexColor.ts  isCollectionType.ts  isTopLayer.ts  isTypeObject.ts  joinSentence.ts  layerDefinitions.ts  normalizeBBox.ts  parameters.ts  provider.ts  request.ts  screenshot.ts  searchFeatures.ts  sortObject.ts  url.ts
ui/src/utils/colors/: index.ts  types.ts
(+72 files in other folders)
