# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: Apache-2.0

[project]
name = "arizonawaterobservatory"
version = "0.1.0"
description = "A datahub for water data in Arizona"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-instrumentation-aiohttp-client>=0.56b0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "orjson>=3.11.0",
    "covjson-pydantic>=0.7.0",
    "geojson-pydantic>=2.0.0",
    "redis>=6.2.0",
    "usace",
    "com",
    "rise",
    "snotel",
    "awdb_com",
    "awdb_forecasts",
    "noaa_rfc",
    "aiohttp>=3.12.12",
    "xarray==2025.11.0", # this should be pinned and be very carefully changed since it has lots of internal complexity which can change query behavior significantly
    "zarr<3", # this MUST be below version 3 for the time being otherwise if it gets bumped above 3 then the event loop cannot be serialized and the async event loop sharing will not work
    "netcdf4>=1.7.2",
    "s3fs>=2025.9.0",
    "nationalwatermodel",
    "config-store",
    "rioxarray>=0.19.0",
    "geopandas>=1.1.1",
    "gcsfs>=2025.10.0",
    "formatters",
    "pgedr==0.2.0",
    # on linux use anywhere between gdal 3.8 which appears to be the latest on github actions workflow runnings and 
    # gdal 3.10 since that is the latest
    # gdal version packaged for debian trixie
    "gdal>=3.8,<3.11 ; platform_system == 'Linux'",

    # on all other platforms use gdal 3.12 since that is the latest
    # gdal version on macos packaged by homebrew and is easier to test with locally than downgrading
    # the system gdal version
    "gdal>=3.12,<3.13 ; platform_system != 'Linux'",
    "pygeoapi-plugins>=0.5.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "pytest-xdist>=3.7.0",
    "radon>=6.0.1",
]
etl = [
    "gcsfs>=2025.10.0",
    "pyarrow>=22.0.0",
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
    "pip>=25.3",
    "dask>=2025.11.0",
    "numcodecs", # this should not be pinned to a specific version to avoid changing the zarr version dependency which is critical for national water model to work properly
]
server = [
    "flask-cors>=6.0.2",
    "gevent>=1.4.0",
    "gunicorn<24",
    "pygeoapi",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
# use dev branch which shares the same features across usbr and asu to keep consistency
# this is rebased to be at least 0.23.0 for pygeoapi
pygeoapi = { git = "https://github.com/internetofwater/pygeoapi.git", rev="1e18b26c09b72c871b1dc4747ad039509354f1d6" }
# it appears that to get the latest code you need to specify the HEAD branch of each package
usace = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/usace", branch="main" }
com = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/com", branch="main" }
rise = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/rise" , rev="main" }
snotel = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/snotel" , branch="main" }
awdb_com = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/awdb_com" , branch="main" }
awdb_forecasts = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/awdb_forecasts", branch="main" }
noaa_rfc = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/noaa_rfc" , branch="main" }
formatters = { git = "https://github.com/internetofwater/Western-Water-Datahub.git", subdirectory = "packages/formatters" , rev="70396a4f583aa8949b78612f4223cf1dd4f8bfd3" }
nationalwatermodel = { workspace = true }
config-store = { workspace = true }

[tool.coverage.run]
# don't include tests 
omit = [
    "**/*_test.py",
    "test/",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# ruff will automatically format long lines
# and remove trailing whitespace; these ignores
# are simply to handle cases like large sparql
# query strings or other literals that cannot be
# formatted safely and thus we would end up ignoring anyways 
ignore = [
 "E501", # line too long 
 "W291"  # trailing whitespace
 ]

[tool.ruff.lint.isort]
# Sort imports taking into account case sensitivity.
case-sensitive = true
# Don't sort straight-style imports (like import sys) before from-style imports (like from itertools import groupby). Instead, sort the imports by module, independent of import style.
force-sort-within-sections = true
# Order imports by type, which is determined by case, in addition to alphabetically.
# By putting this to false we can force the order to be alphabetical.
order-by-type = false
