# Copyright 2026 Lincoln Institute of Land Policy
# SPDX-License-Identifier: Apache-2.0

[project]
name = "smap-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthaccess>=0.17.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "minio>=7.2.20",
    "s3fs>=2026.3.0",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.10",
]
